add PostgreSQL configuration for EntityFramework, add test API endpoint

--- a/Nuclear/appsettings.json
+++ b/Nuclear/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "ConnectionStrings": {
+    "Database": "host=localhost;database=Nuclear;user id=postgres;password=Nuclear"
+  },
   "AllowedHosts": "*"
 }
